Fixed alignment of projects

--- a/styles.css
+++ b/styles.css
@@ -221,6 +221,7 @@ nav{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 5rem;
   width: 100%;
 }
